Development
	Add configure flag --enable-gseal and start fixing code
	Code now compiles with -DGTK_DISABLE_DEPRECATED enabled, enabled by default on GTK 2.18 and higher
	Remove depreciated calls to gtk_window_set_policy
	Start fixing issues to prepare for GTK 3.0 (DEPRECIATED and GSEAL changes)
	Fix bug #391 - Change metadata timeout count from 10 to 50
	Fix bug #355 - Change stream name to only show last part of URL in playlist, tooltip shows full url
	Fix problem with mouse not disappearing when over letterboxing
	Fix bug #392 - the panel disappearing/reappearing on window maximize/restore
	Add some libs to the nautilus plugin compliation process
	Set default value for embedded fonts
	Fix bug #381 - Open does not activate on Enter in Open->Location
	Resize controls slightly in fullscreen mode
	Fullscreen controls in a floating widget
	When running mplayer disable pretty printing
	Fix bug #376 - Rework vdpau codec selection and deinterlace
	Fix minor memory leak when we have an invalid item to play
	When dontplaynext is set, request next item on playlist from plugin
	Add vaapi to list of supported vo's
	Add a couple of icons to the file menu
0.9.9.2
	Fix right click pause/play regression Bug #360
	Fix assertion in get_cover_art
	Updated Polish translation (some strings were overlooked in the previous update)
	Added Arabic, Catalan, Galician, Hebrew, Portuguese translations
	Handle aspect change during video playback
	Allow screen saver to activate when videos are paused
	Set media label width to window size, when embedded
	Fix fullscreen video size when in plugin mode
	Map "." to frame step, no backward step due to mplayer limitation
	Fix set_size_request warning
	Put make_button processing into the idle loop and ensure the button is always visible
	Return true in detect playlist on a uri with .m3u in the uri
	Add -softvol option to -volume detect code to keep from altering master volume
	Add album art lookup for some shoutcast stations