@@ -1,4 +1,5 @@
 Development
+	More work on making code compile with gseal enabled, still more to do
 	Add configure flag --enable-gseal and start fixing code
 	Code now compiles with -DGTK_DISABLE_DEPRECATED enabled, enabled by default on GTK 2.18 and higher
 	Remove depreciated calls to gtk_window_set_policy
